k8s/preview/irai-yoga-v1-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: irai-yoga-v1-server-preview
  namespace: irai-yoga-v1-preview
  labels:
    app: irai-yoga-v1-preview-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: irai-yoga-v1-preview-server
  template:
    metadata:
      labels:
        app: irai-yoga-v1-preview-server
    spec:
      containers:
        - name: irai-yoga-v1-preview-server
          image: harbor.cloudops.terv.pro/portal-irai-yoga/admin:TAG_PLACEHOLDER
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: "2"
              memory: 2Gi
            requests:
              cpu: "500m"
              memory: 1500Mi
      imagePullSecrets:
        - name: harbor-secret
