k8s/preview/irai-yoga-v1-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: SERVICE_NAME_PLACEHOLDER
  namespace: irai-yoga-v1-preview
  labels:
    app: SELECTOR_APP_PLACEHOLDER
    branch: preview
spec:
  selector:
    app: SELECTOR_APP_PLACEHOLDER
  ports:
  - port: PORT_PLACEHOLDER
    targetPort: TARGET_PORT_PLACEHOLDER
    protocol: TCP
  type: ClusterIP
